[package]
name = "rama-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "ua_parse"
path = "fuzz_targets/ua_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_header_x_robots_tag"
path = "fuzz_targets/http_header_x_robots_tag.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_client"
path = "fuzz_targets/h2_client.rs"
test = false
doc = false

[[bin]]
name = "h2_hpack"
path = "fuzz_targets/h2_hpack.rs"
test = false
doc = false

[[bin]]
name = "h2_e2e"
path = "fuzz_targets/h2_e2e.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = { workspace = true, features = ["arbitrary-derive"] }
rama = { path = "../", features = ["full"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dependencies.h2-support]
path = "../rama-http-core/tests/h2-support"

[dependencies.rama-http-core]
path = "../rama-http-core"
features = ["unstable"]

[lints]
workspace = true
