[package]
categories = ["asynchronous", "network-programming"]
edition = "2021"
name = "pango"
version = "0.1.0"
description = "TLS Reverse Proxy using Tokio and Rustls"
homepage = "https://github.com/plabayo/llama"
readme = "README.md"
keywords = ["io", "async", "non-blocking", "futures"]
license = "MIT"
repository = "https://github.com/plabayo/llama"

[lib]
name = "pango"
path = "src/lib/lib.rs"

[[bin]]
name = "pango"
path = "src/bin/main.rs"

[dependencies]
