[package]
name = "rama-cli"
description = "rama cli to move and transform network packets"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
default-run = "rama"

[lints]
workspace = true

[features]
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rama = { version = "0.2.0-alpha.7", path = "..", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
terminal-prompt = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jemallocator = { workspace = true, optional = true }
mimalloc = { workspace = true, default-features = false, optional = true }

[[bin]]
name = "rama"
path = "src/main.rs"
