[package]
name = "rama-cli"
description = "rama cli to move and transform network packets"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
default-run = "rama"

[[bin]]
name = "rama"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mimalloc = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true }
rama = { version = "0.3.0-alpha.1", path = "..", features = [
    "compression",
    "boring",
    "cli",
    "tcp",
    "udp",
    "http-full",
    "proxy-full",
    "opentelemetry",
] }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal-prompt = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = ["with-serde_json-1", "with-chrono-0_4"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tui-logger = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[lints]
workspace = true
