[package]
name = "rama-core"
description = "rama service core code, used by rama and service authors"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
asynk-strim = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-error = { workspace = true }
rama-macros = { workspace = true }
rama-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"] }
tokio-graceful = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "io", "io-util"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[lints]
workspace = true
