[package]
name = "rama-core"
description = "rama service core code, used by rama and service authors"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
# TODO: support nostd
default = []
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
# Route task spawns through `dial9-tokio-telemetry::spawn` so they pick
# up wake-event tracking when a `TracedRuntime` is active. Inert when
# no traced runtime is present. Requires `--cfg tokio_unstable`.
dial9 = ["dep:dial9-tokio-telemetry", "dep:dial9-trace-format"]

[dependencies]
ahash = { workspace = true }
asynk-strim = { workspace = true }
bytes = { workspace = true }
dial9-tokio-telemetry = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, optional = true }
futures = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = ["metrics"] }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-error = { workspace = true }
rama-macros = { workspace = true, features = ["std"] }
rama-utils = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"] }
tokio-graceful = { workspace = true }
tokio-stream = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "io", "io-util"] }
tracing = { workspace = true }
tracing-appender = { workspace = true, features = ["parking_lot"] }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[lints]
workspace = true
