[package]
name = "rama-core"
description = "rama service core code, used by rama and service authors"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "tokio_unstable"]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = ["std"]
std = [
    "bytes/std",
    "futures/executor",
    "futures/std",
    "rama-error/std",
    "rama-macros/std",
    "rama-utils/std",
    "tracing/std",
    "dep:ahash",
    "dep:parking_lot",
    "dep:serde_json",
    "dep:tokio",
    "dep:tokio-graceful",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:tracing-appender",
]
opentelemetry = [
    "std",
    "dep:opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
# Route task spawns through `dial9-tokio-telemetry::spawn` so they pick
# up wake-event tracking when a `TracedRuntime` is active. Inert when
# no traced runtime is present. Requires `--cfg tokio_unstable`.
dial9 = ["std", "dep:dial9-tokio-telemetry", "dep:dial9-trace-format"]

[dependencies]
ahash = { workspace = true, optional = true }
asynk-strim = { workspace = true }
bytes = { version = "1", default-features = false }
dial9-tokio-telemetry = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = ["metrics", "logs"] }
parking_lot = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
rama-error = { workspace = true }
rama-macros = { workspace = true }
rama-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"], optional = true }
tokio-graceful = { workspace = true, optional = true }
tokio-stream = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, features = ["codec", "io", "io-util"], optional = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-appender = { workspace = true, features = ["parking_lot"], optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[lints]
workspace = true
