[package]
name = "rama-crypto"
description = "All crypto logic used by rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["cyrpto", "security", "certificates", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = []
aws-lc = ["dep:aws-lc-rs", "rcgen/aws_lc_rs", "x509-parser/verify-aws"]
ring = ["rcgen/ring", "x509-parser/verify"]
native-certs = [
    "dep:webpki-root-certs",
    "dep:security-framework",
    "dep:schannel",
    "dep:openssl-probe",
    "dep:ahash",
]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
base64 = { workspace = true }
rama-core = { workspace = true }
rama-utils = { workspace = true }
rcgen = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
webpki-root-certs = { workspace = true, optional = true }
x509-parser = { workspace = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
ahash = { workspace = true, optional = true }
security-framework = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
schannel = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
