[package]
name = "rama-crypto"
description = "All crypto logic used by rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["cyrpto", "security", "certificates", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# native C deps can't cross-compile in the docs.rs builder; linux-only docs
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
aws-lc = ["dep:aws-lc-rs", "rcgen/aws_lc_rs", "x509-parser/verify-aws"]
ring = ["rcgen/ring", "x509-parser/verify"]
boring = ["dep:rama-boring"]
native-certs = [
    "dep:webpki-root-certs",
    "dep:security-framework",
    "dep:schannel",
    "dep:openssl-probe",
    "dep:ahash",
]

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
ahash = { workspace = true, optional = true }
security-framework = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
schannel = { workspace = true, optional = true }

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
base64 = { workspace = true }
rama-boring = { workspace = true, optional = true }
rama-core = { workspace = true, features = ["std"] }
rama-net = { workspace = true, features = ["std"] }
rama-utils = { workspace = true, features = ["std"] }
rcgen = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
time.workspace = true
webpki-root-certs = { workspace = true, optional = true }
x509-parser = { workspace = true }
yasna = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
