[package]
name = "rama-dns"
description = "DNS support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "dns", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
hickory = ["dep:hickory-resolver"]

[dependencies]
hickory-resolver = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-net = { workspace = true }
rama-utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "sync"] }

[target.'cfg(any(target_vendor = "apple", target_os = "windows"))'.dependencies]
parking_lot = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ahash = { workspace = true }
libc = { workspace = true }
moka = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_NetworkManagement_Dns"] }

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
ahash = { workspace = true }

[lints]
workspace = true
