[package]
name = "rama-dns"
description = "DNS support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "dns", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[package.metadata.cargo-machete]
ignored = ["bindgen"]

[features]
default = []
hickory = ["dep:hickory-resolver"]
# Optional [dial9] runtime telemetry support.
#
# [dial9]: https://github.com/dial9-rs/dial9-tokio-telemetry
dial9 = ["dep:dial9-tokio-telemetry", "dep:dial9-trace-format", "rama-net/dial9"]

[dependencies]
dial9-tokio-telemetry = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-net = { workspace = true }
rama-utils = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "sync"] }

[target.'cfg(any(target_vendor = "apple", target_os = "windows"))'.dependencies]
parking_lot = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ahash = { workspace = true }
libc = { workspace = true }
moka = { workspace = true, features = ["sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_NetworkManagement_Dns"] }

[build-dependencies]
bindgen = { workspace = true }

[dev-dependencies]
ahash = { workspace = true }

[lints]
workspace = true
