[package]
name = "rama-error"
description = "error types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["error", "error-handling", "rama"]
categories = ["rust-patterns"]
authors = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["std"]
std = []

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]

[lints]
workspace = true
