[package]
name = "rama-error"
description = "error types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["error", "error-handling", "rama"]
categories = ["rust-patterns"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]

[lints]
workspace = true
