[package]
name = "rama-fastcgi"
description = "FastCGI support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["io", "async", "fastcgi", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
http = ["dep:rama-http-types", "dep:tokio-util", "rama-net/http"]

[dependencies]
rama-core = { workspace = true }
rama-http-types = { workspace = true, optional = true }
rama-net = { workspace = true }
rama-utils = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, optional = true, features = ["io"] }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
