[package]
name = "rama-fp"
description = "a fingerprinting service for rama to generate and test fingerprints"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
default-run = "rama-fp"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rama = { version = "0.2", path = "..", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "rama-fp"
path = "src/main.rs"
