[package]
name = "rama-fp"
description = "a fingerprinting service for rama to generate and test fingerprints"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
default-run = "rama-fp"

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
rama = { version = "0.2.0-alpha.1", path = "..", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "rama-fp"
path = "src/main.rs"
