[package]
name = "rama-grpc-build"
description = "Grpc codegen support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "grpc", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["protobuf"]
protobuf = ["dep:prost-build", "dep:prost-types"]

[dependencies]
prettyplease = { workspace = true }
rama-utils = { workspace = true }
proc-macro-crate = { workspace = true }
prost-build = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
rama-grpc = { workspace = true }

[lints]
workspace = true
